<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/task_item_padding">

    <CheckBox
        android:id="@+id/task_item_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:checked="false"/>

    <ImageView
        android:id="@+id/task_item_icon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_house"
        android:contentDescription="@string/task_icon_placeholder"
        android:padding="@dimen/margin_small" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/task_item_checkbox"
        android:layout_toStartOf="@id/task_item_icon"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_default"
        android:paddingEnd="@dimen/padding_default">

        <TextView
            android:id="@+id/task_item_name"
            style="@style/TaskNameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nazwa_zadania"/>

        <TextView
            android:id="@+id/task_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textSize="@dimen/task_date_size"
            android:text="@string/data_utworzenia"/>
    </LinearLayout>

</RelativeLayout>